--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "client",
+  "name": "event-management-platform",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
-  "proxy": "http://localhost:5555",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "formik": "^2.4.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.4",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
-  "devDependencies": {"@babel/plugin-proposal-private-property-in-object":"^7.21.11"},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
